[package]
name = "jlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
multipeek = "0.1"
strum = "0.24.0"
strum_macros = "0.24.0"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
insta = "*"
